# radx

./: .env.example  .gitignore  README.md  config.py  connector.py  logger.py  main.py  pyproject.toml  ws.py
strategies/: DefaultStrategy.py  __init__.py  default_strategy.py
tests/: test_default_strategy.py
tests/data/: test_data.csv  test_data_2.csv
trading/: trader.py
