[project]
name = "radx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "dash>=3.0.4",
    "dotenv>=0.9.9",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "requests>=2.32.3",
    "signalrcore>=0.9.5",
    "ta>=0.11.0",
    "ta-lib>=0.6.3",
    "vectorbt>=0.27.3",
]

[tool.black]
line-length = 160
